# blackbox-search-agent-rl

./: .gitmodules  README.md
overlays/prorl-agent-server/: pyproject.toml
overlays/prorl-agent-server/examples/search_verl_polar/: README.md  extract_step_metrics.py  launch_polar_long.sh  prepare_data.py  topology.yaml  train_polar_long.sh
overlays/prorl-agent-server/examples/swegym_verl_grpo/: render_topology.py
overlays/prorl-agent-server/scripts/patch/: patch_verl.sh  verl_polar.patch
overlays/prorl-agent-server/src/polar/: http_utils.py
overlays/prorl-agent-server/src/polar/gateway/: node.py  proxy.py  server.py
overlays/prorl-agent-server/src/polar/gateway/transform/: base.py
overlays/prorl-agent-server/src/polar/rollout/: manager.py  pipeline.py
overlays/prorl-agent-server/src/polar/trajectory/builder/: per_request.py  prefix_merging.py  record_utils.py
overlays/prorl-agent-server/src/verl_polar_bridge/: __init__.py  _messages.py  adapter.py  artifacts.py  client.py  config.py  dataproto.py  debug_utils.py  hooks.py  manager.py  metrics.py  native_openai_server.py  packed_actor.py  scheduler.py  variable_pack.py  verl_packed_patch.py
overlays/prorl-agent-server/src/verl_polar_bridge/search_agent/: __init__.py  driver.py  evaluator.py  harness.py  local_runtime.py
overlays/prorl-agent-server/tests/trajectory/: test_prefix_merging_prompt_grounded_single.py
overlays/prorl-agent-server/tests/verl_polar_bridge/: test_packed_actor_metrics.py  test_search_agent_subagent.py
scripts/: apply_prorl_overlay.sh
